# mega-itmo

./: .env.example  .gitignore  Dockerfile  Dockerfile.review  GITHUB_APP_SETUP.md  Makefile  README.md  REVIEW_AGENT_GITHUB_APP_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt  target_task.txt
.github/workflows/: ci.yml
src/: __init__.py
src/api/: __init__.py  main.py  service.py
src/code_agent/: agent.py  cli.py  tools.py
src/review_agent/: __init__.py  agent.py  cli.py  tools.py
src/review_api/: main.py  service.py
src/utils/: github_client.py  langchain_llm.py  llm_client.py
tests/: __init__.py  test_code_agent.py  test_code_agent_service.py  test_code_agent_tools.py  test_github_client.py  test_langchain_llm.py  test_placeholder.py  test_review_agent.py  test_review_agent_service.py  test_review_agent_tools.py
